# dnd-app

./: .gitignore  .pre-commit-config.yaml  D&D app walkthrough.docx  Dockerfile  MANIFEST.in  README.md  fabfile.py  pyproject.toml
.github/workflows/: main.yml
client/: .env.development  .env.production  package-lock.json  package.json  tsconfig.json
client/app/: add-npc-button.tsx  condition.tsx  create-session.tsx  description-tooltip.tsx  globals.css  layout.tsx  npc-conditions.tsx  npc-hp.tsx  npc.ts  page.tsx  update-conditions.tsx  update-hp-button.tsx
client/app/[sessionid]/: page.tsx
client/app/[sessionid]/[playerName]/: condition-item.tsx  page.tsx  secrets.tsx  skill-request.tsx
client/app/[sessionid]/alert/: alerts.tsx
client/app/[sessionid]/chat/: chat-box.tsx  send-player-message.tsx
client/app/[sessionid]/dm/: add-character-dialog.tsx  add-character.tsx  (+27 more)
client/app/_apis/: character.ts  characterApi.ts  clientApi.ts  customMonsterApi.ts  dnd5eApi.ts  dnd5eTypings.ts  eventType.ts  playerInput.ts  session.ts  sessionApi.ts  sessionGroupApi.ts  sessionStorage.ts  sesssionGroup.ts
client/app/common/: conditions-context.tsx  footer.tsx  response-dialog.tsx  session-context.tsx  sessionStorage.tsx  tab-common.tsx  top-nav.tsx  websocket-context.tsx
client/app/create/: page.tsx
client/app/session/: page.tsx
src/: README.md  pyproject.toml
src/scryer/: app.py  asyncit.py  cli.py  creatures.py  events.py  main.py  services.py  sessions.py
src/scryer/creatures/: __init__.py  attrs.py  creature.py  users.py
src/scryer/data/: __init__.py  dao.py  models.py
src/scryer/services/: __init__.py  brokers.py  creatures.py  data.py  events.py  service.py  sessions.py  sockets.py
src/scryer/util/: __init__.py  events.py  filters.py  monster.py  session_group.py  shelves.py
(+42 files in other folders)
