[build-system]
requires = ["setuptools", "isort", "mypy", "pytest", "twine", "wheel"]
build-backend = ["setuptools.build_meta"]

[project]
authors = [
    { name = "Keenan W. Wilkinson" },
    { name = "Joshua Hoff" }
]
dependencies = []
description = { file = "README.md" }
name = "dnd-app"
requires-python = ">=3.12"
