[build-system]
requires = ["setuptools", "isort", "mypy", "pytest", "twine", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Keenan W. Wilkinson" },
    { name = "Joshua Hoff" }
]
dependencies = [
    "blinker==1.7.0",
    "click==8.1.7",
    "Flask==3.0.0",
    "h11==0.14.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.3",
    "uvicorn==0.25.0",
    "Werkzeug==3.0.1"
]
name = "dnd-app"
requires-python = ">=3.12"
version = "0.0.0"
